Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1577,3 +1577,13 @@ seperti berikut ini : <br/>
 [-] Gateway meminta ke "User Subgraph" mengenai Informasi mengenai User. <br/>
 [-] Gateway meminta ke "Order Subgraph" mengenai Informasi mengenai Order. <br/>
 [-] Gateway meminta ke "Product Subgraph" mengenai Informasi mengenai Order. <br/>
+
+ <br/>
+  <br/>
+(3) Combine The Response :  <br/>
+(Menggabungkan Response)  <br/>
+Gateway mengumpulkan Data dari semua Subgraph dan menggabungkannya untuk membuat "Unified Respons" (satu response terpadu).   <br/>
+  <br/>
+
+(4) Return The Response to The Client :  <br/>
+Gateway mengirim "Unified Response" ke Client  <br/>
