Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1587,3 +1587,6 @@ Gateway mengumpulkan Data dari semua Subgraph dan menggabungkannya untuk membuat
 
 (4) Return The Response to The Client :  <br/>
 Gateway mengirim "Unified Response" ke Client  <br/>
+
+---------
+# C. Supergraph
