Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1590,3 +1590,11 @@ Gateway mengirim "Unified Response" ke Client  <br/>
 
 ---------
 # C. Supergraph
+
+>> ini dari Dokumentasi
+
+<br/>
+Data Supergraph adalah Framework yang menyatukan semua Subgraph Anda ke dalam satu API yang aman. <br/>
+Orkestrasi ini memungkinkan pembuatan aplikasi  yang mencakup berbagai Data Source, Services , Third-Party API,
+Business Logic, dan — yang terpenting — Team, yang menjembatani kompleksitas mereka 
+dengan mulus ke dalam satu lapisan. <br/>
