Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1598,3 +1598,11 @@ Data Supergraph adalah Framework yang menyatukan semua Subgraph Anda ke dalam sa
 Orkestrasi ini memungkinkan pembuatan aplikasi  yang mencakup berbagai Data Source, Services , Third-Party API,
 Business Logic, dan — yang terpenting — Team, yang menjembatani kompleksitas mereka 
 dengan mulus ke dalam satu lapisan. <br/>
+
+<br/>
+Bagi mereka yang bertanggung jawab untuk memelihara Data Layer, <br/>
+ini berarti Anda sekarang memiliki satu Holistic API untuk dikelola,  <br/>
+bukan beberapa sumber data dan koneksi yang berbeda.<br/>
+ Ini memungkinkan Anda untuk membuat CI/CD Pipelines, <br/>
+memantau kinerja menggunakan industry-standard Observability tools, <br/>
+dan mengelola Access Control dengan cara yang lebih efisien. <br/>
