Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1606,3 +1606,9 @@ bukan beberapa sumber data dan koneksi yang berbeda.<br/>
  Ini memungkinkan Anda untuk membuat CI/CD Pipelines, <br/>
 memantau kinerja menggunakan industry-standard Observability tools, <br/>
 dan mengelola Access Control dengan cara yang lebih efisien. <br/>
+
+<br/>
+Bagi konsumen Anda, ini berarti mereka memiliki Single Endpoint (satu endpoint)untuk mengakses semua data yang mereka butuhkan, <br/>
+sehingga mengurangi kompleksitas aplikasi mereka. <br/>
+Ini juga memungkinkan mereka untuk fokus membangun User Experience sebaik mungkin, <br/>
+daripada bertikai (wrangling) dengan Data Layer yang mendasarinya.
