Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1612,3 +1612,10 @@ Bagi konsumen Anda, ini berarti mereka memiliki Single Endpoint (satu endpoint)u
 sehingga mengurangi kompleksitas aplikasi mereka. <br/>
 Ini juga memungkinkan mereka untuk fokus membangun User Experience sebaik mungkin, <br/>
 daripada bertikai (wrangling) dengan Data Layer yang mendasarinya.
+
+
+## 1. Understanding Supergraph for GraphQL in General
+>> Penjelasan ini diluar Dokumentasi
+
+
+## 2. Understanding Supergraph for GraphQL in Hasura
