Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1625,4 +1625,20 @@ daripada bertikai (wrangling) dengan Data Layer yang mendasarinya.
 Supergraph menggabungkan beberapa Subgraph menjadi "Satu Schema yang lebih besar". <br/>
 Dengan ini, Supergraph menyediakan "Satu API" ke Client, walaupun Supergraph menarik Data dari beberapa Sumber (Source). <br/>
 
+### 1.2) Why use a Supergraph ? <br/>
+
+- Tanpa Supergraph, menggabungkan Data dari Domain yang berbeda akan menjadi tantangan karena setiap Team perlu mengkoordinasikan setiap perubahan kecil di seluruh API. <br/>
+
+- Supergraph memungkinkan kita untuk : <br/>
+
+(1) Unify API from Different Services : <br/>
+menyatukan API dari berbagai Service (Layanan), sehingga Client tidak perlu tahu dari mana Data berasal. <br/>
+
+(2)  Scale API Development : <br/>
+Mengskalakan API Development di berbagai Team atau Services. <br/>
+
+(3) Ensure API Flexibility : <br/>
+Memastikkan Fleksibilitas API dengan memungkinkan Team untuk menambah Services baru atau meng-update Schema tanpa mempengaruhi keseluruhan API. <br/>
+
+
 ## 2. Understanding Supergraph for GraphQL in Hasura
