Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1640,5 +1640,20 @@ Mengskalakan API Development di berbagai Team atau Services. <br/>
 (3) Ensure API Flexibility : <br/>
 Memastikkan Fleksibilitas API dengan memungkinkan Team untuk menambah Services baru atau meng-update Schema tanpa mempengaruhi keseluruhan API. <br/>
 
+### 1.3) How The Supergraph Works with Subgraph and a Gateway ?  <br/>
+(Bagaimana Supergraph bekerja dengan Subgraph dan Gateway)  <br/>
+ <br/>
+Berikut ini cara kerja "Supergraph" pada "GraphQL Federated System" :  <br/>
+
+(1) Subgraph :   <br/>
+Setiap Team mengelola sebuah Subgraph.  <br/>
+yang mana Setiap Subgraph mengelola satu area tertentu.  <br/>
+
+(2) Gateway :  <br/>
+Gateway merupakan Komponen yang menggabungkan Semua Subgraph menjadi Supergraph.  <br/>
+yang mana Gateway mengelola Routing (memberi Rute / memberi arah) dan mengelola Data Retrieval dari berbagai Subgraph dan menyediakan Skema 'Unified Supergraph' ke Client.  <br/>
+
+(3) Supergraph Schema :  <br/>
+Supergraph merupakan Schema yang terbuat dari Semua Subgraph.  <br/>
 
 ## 2. Understanding Supergraph for GraphQL in Hasura
