Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1617,9 +1617,12 @@ daripada bertikai (wrangling) dengan Data Layer yang mendasarinya.
 ## 1. Understanding Supergraph for GraphQL in General
 >> Penjelasan ini diluar Dokumentasi
 
-- Pada GraphQL, Supergraph merupakan "Single & Unified Schema" yang menggabungkan beberapa Subraph menjadi Satu API. <br/> <br/>
+- Pada GraphQL, Supergraph merupakan "Single & Unified Schema" yang menggabungkan beberapa Subgraph menjadi Satu API. <br/> <br/>
 
 ### 1.1) What is a Supergraph ?
+
+- Supergraph mengandung Subgraph dan Gateway. <br/>
+Dengan kata lain, Subgraph & Gateway merupakan bagian dari Supergraph. <br/>
 
 - Supergraph berinteraksi dengan Client. <br/>
 Supergraph menggabungkan beberapa Subgraph menjadi "Satu Schema yang lebih besar". <br/>
