Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1617,10 +1617,9 @@ daripada bertikai (wrangling) dengan Data Layer yang mendasarinya.
 ## 1. Understanding Supergraph for GraphQL in General
 >> Penjelasan ini diluar Dokumentasi
 
-- Pada GraphQL, Supergraph merupakan "Single & Unified Schema" yang menggabungkan beberapa Subgraph menjadi Satu API. <br/> <br/>
-
+- Pada GraphQL, Supergraph merupakan "Single & Unified Schema" yang menggabungkan beberapa Subgraph menjadi Satu API. <br/>
+  
 - Istilahnya, Supergraph sebagai 'Sebuah Payung Besar' yang menutupi 'Beberapa Payung Kecil', yang mana Payung Kecil tersebut adalah "Subgraph".
-Setiap Subgraph itu seperti 'mini API' (API kecil) yang fokus pada bagian spesifik dari Aplikasi. <br/>
 
 ### 1.1) What is a Supergraph ?
 
