Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1661,4 +1661,7 @@ yang mana Gateway mengelola Routing (memberi Rute / memberi arah) dan mengelola 
 (3) Supergraph Schema :  <br/>
 Supergraph merupakan Schema yang terbuat dari Semua Subgraph.  <br/>
 
-## 2. Understanding Supergraph for GraphQL in Hasura
+## 2. Understanding Supergraph for GraphQL in Hasura <br/>
+
+- Pada Hasura, Supergraph merupakan "Unified GraphQL API" yang menggabungkan Data dari berbagai Sumber (seperti Database, Remote GraphQL Services, REST API, dan sebagainya) menjadi Satu API yang komprehensif yang Client dapat berinteraksi dengan lancar. <br/>
+yang mana konsep ini berguna untuk Aplikasi Besar yang berbagai bagian data dikelola secara terpisah (seperti berbagai Database atau Service dikelola secara terpisah). <br/>
