Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1665,3 +1665,30 @@ Supergraph merupakan Schema yang terbuat dari Semua Subgraph.  <br/>
 
 - Pada Hasura, Supergraph merupakan "Unified GraphQL API" yang menggabungkan Data dari berbagai Sumber (seperti Database, Remote GraphQL Services, REST API, dan sebagainya) menjadi Satu API yang komprehensif yang Client dapat berinteraksi dengan lancar. <br/>
 yang mana konsep ini berguna untuk Aplikasi Besar yang berbagai bagian data dikelola secara terpisah (seperti berbagai Database atau Service dikelola secara terpisah). <br/>
+
+### 2.1) How Hasura Builds a Supergraph ?
+
+- Hasura membangun Supergraph dengan menggunakan Features seperti "Remote Schemas" & "Actions".
+Berikut ini Penjelasannya :
+
+#### [1] Remote Schemas :
+Kita dapat menghubungkan External GraphQL Services (layanan GraphQL Eksternal) ke Hasura sebagai Remote Schemas.
+Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment Data) yang ingin kita tambahkan pada Skema Utama Hasura (Hasura's Main Schema).
+
+>> ^For your information^
+>> {1} **Remote Schemas**
+>>
+>> ----
+>> {2} **External GraphQL Services**
+>>
+
+#### [2] Actions : 
+Actions memungkinkan kita untuk memperluas Hasura Schema dengan mendefinisikan 'Custom Business Logic' dan menghubungkan ke REST API.
+Dengan Actions, kita dapat mendefinisikan Custom GraphQL Query atau Mutations yang yang menghungkan REST Endpoints ke Supergraph.
+
+>> ^For your information^
+>> {1} **Actions**
+>>
+>> ----
+>> {2} **Custom Business Logic**
+>> 
