Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1681,6 +1681,12 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> ----
 >> {2} **External GraphQL Services**
 >>
+>> ----
+>> {3} **REST API** :
+>> **(REST API in general)**
+>>
+>> ----
+>> {4} **REST API in GraphQL**
 
 #### [2] Actions : 
 Actions memungkinkan kita untuk memperluas Hasura Schema dengan mendefinisikan 'Custom Business Logic' dan menghubungkan ke REST API.
