Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1675,26 +1675,31 @@ Berikut ini Penjelasannya :
 Kita dapat menghubungkan External GraphQL Services (layanan GraphQL Eksternal) ke Hasura sebagai Remote Schemas.
 Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment Data) yang ingin kita tambahkan pada Skema Utama Hasura (Hasura's Main Schema).
 
->> ^For your information^
->> {1} **Remote Schemas**
+>> ^For your information^ <br/>
+>> {1} **Remote Schemas** <br/>
 >>
 >> ----
->> {2} **External GraphQL Services**
+>> {2} **External GraphQL Services** <br/>
 >>
 >> ----
->> {3} **REST API** :
->> **(REST API in general)**
+>> {3} **REST API** : <br/>
+>> **(REST API in general)** <br/>
 >>
 >> ----
->> {4} **REST API in GraphQL**
+>> {4} **REST API in GraphQL** <br/>
 
 #### [2] Actions : 
 Actions memungkinkan kita untuk memperluas Hasura Schema dengan mendefinisikan 'Custom Business Logic' dan menghubungkan ke REST API.
 Dengan Actions, kita dapat mendefinisikan Custom GraphQL Query atau Mutations yang yang menghungkan REST Endpoints ke Supergraph.
 
->> ^For your information^
->> {1} **Actions**
+>> ^For your information^ <br/>
+>> {1} **Actions** <br/>
 >>
 >> ----
->> {2} **Custom Business Logic**
->> 
+>> {2} **Custom Business Logic** <br/>
+>>
+
+<br/>
+<br/>
+>> # Pelajar & Lengkapi dulu "For Your Information" diatas !!!
+
