Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1701,5 +1701,5 @@ Dengan Actions, kita dapat mendefinisikan Custom GraphQL Query atau Mutations ya
 
 <br/>
 <br/>
->> # Pelajar & Lengkapi dulu "For Your Information" diatas !!!
+ # Pelajari & Lengkapi dulu "For Your Information" diatas !!!
 
