Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1697,9 +1697,9 @@ Dengan Actions, kita dapat mendefinisikan Custom GraphQL Query atau Mutations ya
 >>
 >> ----
 >> {2} **Custom Business Logic** <br/>
->>
+>> <br/>
 
-<br/>
-<br/>
- # Pelajari & Lengkapi dulu "For Your Information" diatas !!!
+
+
+>>  # Pelajari & Lengkapi dulu "For Your Information" diatas !!!
 
