--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1676,8 +1676,11 @@ Kita dapat menghubungkan External GraphQL Services (layanan GraphQL Eksternal) k
 Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment Data) yang ingin kita tambahkan pada Skema Utama Hasura (Hasura's Main Schema).
 
 >> ^For your information^ <br/>
->> {1} **Remote Schemas** <br/>
->>
+>> ### {1} **Remote Schemas** <br/>
+>>  - Pada GraphQL, "Remote Schemas" memungkinkan kita untuk menggabungkan beberapa "Beberapa GraphQL API" menjadi "Satu Unified API". <br/>
+>> ini berarti bahwa meskipun Data & Service kita tersebar di berbagai Server atau Database yang berbeda, kita dapat menghubungkannya Dibawah "Satu GraphQL Endpoint", <br/>
+>> Sehingga dapat memudahkan Client untuk mengakses semua data yang dibutuhkan tanpa perlu mengelola Multiple Endpoints (tanpa perlu mengelola Lebih dari Satu Endpoint). <br/>
+>> 
 >> ----
 >> {2} **External GraphQL Services** <br/>
 >>
