--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1680,7 +1680,18 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  - Pada GraphQL, "Remote Schemas" memungkinkan kita untuk menggabungkan beberapa "Beberapa GraphQL API" menjadi "Satu Unified API". <br/>
 >> ini berarti bahwa meskipun Data & Service kita tersebar di berbagai Server atau Database yang berbeda, kita dapat menghubungkannya Dibawah "Satu GraphQL Endpoint", <br/>
 >> Sehingga dapat memudahkan Client untuk mengakses semua data yang dibutuhkan tanpa perlu mengelola Multiple Endpoints (tanpa perlu mengelola Lebih dari Satu Endpoint). <br/>
+>>  - Remote Schema adalah 'External GraphQL API' yang berada di luar 'GraphQL API utama' kita. <br/>
+>> ('External GraphQL API' merupakan GraphQL API yang berbeda dari 'GraphQL API utama kita' (Main GraphQL API)).  <br/>
 >> 
+>> - Remote Schema adalah "GraphQL API" yang berada di luar "GraphQL Server atau Service Utama Kita", <br/>
+>> contohnya :  <br/>
+>> 
+>> [-] sebuah "User Service" mengelola Data User dengan 'GraphQL API nya' sendiri. <br/>
+>> [-] sebuah "Product Service" mengelola Data Product dengan 'GraphQL API nya' sendiri. <br/>
+>> [-] sebuah "Order Service"  mengelola Data Order dengan 'GraphQL API nya' sendiri. <br/>
+>> <br/>
+>> Karena Service untuk User, Product, dan Order memiliki GraphQL API yang berada di Luar GraphQL API Utama kita,  <br/>
+>> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/>
 >> ----
 >> {2} **External GraphQL Services** <br/>
 >>
