Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1690,8 +1690,10 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  [-] sebuah "Order Service"  mengelola Data Order dengan 'GraphQL API nya' sendiri. <br/>
 >> <br/>
 >> Karena Service untuk User, Product, dan Order memiliki GraphQL API yang berada di Luar GraphQL API Utama kita,  <br/>
->> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/> <br/>
->> ---- 
+>> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/>
+>>
+>> ----
+>> <br/>
 >> ### {2} **External GraphQL Services** <br/>
 >>
 >> ----
