Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1680,8 +1680,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  - Pada GraphQL, "Remote Schemas" memungkinkan kita untuk menggabungkan beberapa "Beberapa GraphQL API" menjadi "Satu Unified API". <br/>
 >> ini berarti bahwa meskipun Data & Service kita tersebar di berbagai Server atau Database yang berbeda, kita dapat menghubungkannya Dibawah "Satu GraphQL Endpoint", <br/>
 >> Sehingga dapat memudahkan Client untuk mengakses semua data yang dibutuhkan tanpa perlu mengelola Multiple Endpoints (tanpa perlu mengelola Lebih dari Satu Endpoint). <br/>
->>  - Remote Schema adalah 'External GraphQL API' yang berada di luar 'GraphQL API utama' kita. <br/>
->> ('External GraphQL API' merupakan GraphQL API yang berbeda dari 'GraphQL API utama kita' (Main GraphQL API)).  <br/>
+>>  - Remote Schema adalah 'External GraphQL API' yang berada di luar ' Server GraphQL utama' kita. <br/>
+>> ('External GraphQL API' merupakan GraphQL API yang berbeda dari 'Server GraphQL utama kita' (Main GraphQL Server)).  <br/>
 >> 
 >> - Remote Schema adalah "GraphQL API" yang berada di luar "GraphQL Server atau Service Utama Kita", <br/>
 >> contohnya :  <br/>
