Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1681,8 +1681,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> ini berarti bahwa meskipun Data & Service kita tersebar di berbagai Server atau Database yang berbeda, kita dapat menghubungkannya Dibawah "Satu GraphQL Endpoint", <br/>
 >> Sehingga dapat memudahkan Client untuk mengakses semua data yang dibutuhkan tanpa perlu mengelola Multiple Endpoints (tanpa perlu mengelola Lebih dari Satu Endpoint). <br/>
 >>  - Remote Schema adalah 'External GraphQL API' yang berada di luar ' Server GraphQL utama' kita. <br/>
->> ('External GraphQL API' merupakan GraphQL API yang berbeda dari 'Server GraphQL utama kita' (Main GraphQL Server)).  <br/>
->> 
+>> (ini maksudnya "External GraphQL API" di-hosting pada Server yang berbeda dengan 'Server Utama GraphQL' kita) <br/>
+>>
 >> - Remote Schema adalah "GraphQL API" yang berada di luar "GraphQL Server atau Service Utama Kita", <br/>
 >> contohnya :  <br/>
 >>  [-] sebuah "User Service" mengelola Data User dengan 'GraphQL API nya' sendiri. <br/>
