Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1691,19 +1691,24 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> <br/>
 >> Karena Service untuk User, Product, dan Order memiliki GraphQL API yang berada di Luar GraphQL API Utama kita,  <br/>
 >> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/>
->> #### 1.1) Cara Kerja "Remote Schemas" pada GraphQL Federation :  <br/>
+>> - Cara Kerja "Remote Schemas" pada GraphQL Federation :  <br/>
 >> 
->> - Pada 'GraphQL Federation', Remote Schemas memugkinkan kita untuk menambah beberapa 'GraphQL API yang terpisah' ke sebuah 'GraphQL Server Utama'. <br/>
->> 'GraphQL Server Utama' ini menggabungkan beberapa Skema berbeda menjadi 'Satu Unified Schemas', <br/>
+>>  Pada 'GraphQL Federation', Remote Schemas memugkinkan kita untuk menambah beberapa 'GraphQL API yang terpisah' ke sebuah 'GraphQL Server Utama'. <br/>
+>> GraphQL Server Utama' ini menggabungkan beberapa Skema berbeda menjadi 'Satu Unified Schemas', <br/>
 >> sehingga Client dapat meng-Query Data antar Service (layanan) dengan lancar. <br/>
 >> Misalnya : <br/>
+>>
 >> [-] "User Service" & "Product Service" merupakan 'External GraphQL API', <br/>
 >> sehingga saat Client meminta 'User Data' & 'Product Data' dalam sebuah Query yang sama, <br/>
 >> 'Main GraphQL Server' (GraphQL Server Utama) meneruskan masing-masing bagian Query ke Service yang terkait <br/>
 >> (Query yang meminta Data User dikrimkan ke 'User Service', dan Query yang meminta Data Product dikrimkan ke 'Product Service'), <br/>
 >> kemudian Main GraphQL Server menggabungkan Result dari masing-masing Service.  <br/>
 >> <br/>
+>>
 >> [-] Client menerima 'Satu Response' seolah-olah mereka meminta dari 'Satu GraphQL API', padahal Data bersumber dari Sumber yang berbeda. <br/>
+>>
+>>
+>>
 >> ----
 >> <br/>
 >> ### {2} **External GraphQL Services** <br/>
