Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1690,14 +1690,15 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  [-] sebuah "Order Service"  mengelola Data Order dengan 'GraphQL API nya' sendiri. <br/>
 >> <br/>
 >> Karena Service untuk User, Product, dan Order memiliki GraphQL API yang berada di Luar GraphQL API Utama kita,  <br/>
->> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/>
->> - Cara Kerja "Remote Schemas" pada GraphQL Federation :  <br/>
+>> maka jika kita ingin meng-akses Data untuk User, Product, Order dari 'Satu GraphQL Endpoint', kita bisa menggunakan "Remote Schemas" untuk menggabungkan banyak API ini. <br/> <br/> <br/>
+>>
+>> ### 1.1) Cara Kerja "Remote Schemas" pada GraphQL Federation :  <br/>
 >> 
->>  Pada 'GraphQL Federation', Remote Schemas memugkinkan kita untuk menambah beberapa 'GraphQL API yang terpisah' ke sebuah 'GraphQL Server Utama'. <br/>
+>> - Pada 'GraphQL Federation', Remote Schemas memugkinkan kita untuk menambah beberapa 'GraphQL API yang terpisah' ke sebuah 'GraphQL Server Utama'. <br/>
 >> GraphQL Server Utama' ini menggabungkan beberapa Skema berbeda menjadi 'Satu Unified Schemas', <br/>
 >> sehingga Client dapat meng-Query Data antar Service (layanan) dengan lancar. <br/>
->> Misalnya : <br/>
 >>
+>> Misalnya : <br/>
 >> [-] "User Service" & "Product Service" merupakan 'External GraphQL API', <br/>
 >> sehingga saat Client meminta 'User Data' & 'Product Data' dalam sebuah Query yang sama, <br/>
 >> 'Main GraphQL Server' (GraphQL Server Utama) meneruskan masing-masing bagian Query ke Service yang terkait <br/>
