Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1706,9 +1706,11 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> kemudian Main GraphQL Server menggabungkan Result dari masing-masing Service.  <br/>
 >> <br/>
 >>
->> [-] Client menerima 'Satu Response' seolah-olah mereka meminta dari 'Satu GraphQL API', padahal Data bersumber dari Sumber yang berbeda. <br/>
+>> [-] Client menerima 'Satu Response' seolah-olah mereka meminta dari 'Satu GraphQL API', padahal Data bersumber dari Sumber yang berbeda. <br/>  <br/>
 >>
->>
+>> ### 1.3) How Remote Schemas are used in Hasura ?  <br/>
+>> ### (Bagaimana Remote Schemas digunakan di Hasura)  <br/>
+>> - Remote Schemas memungkinkan kita untuk mengintegrasikan "External Service" dengan Hasura.  <br/>
 >>
 >> ----
 >> <br/>
