Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1677,9 +1677,10 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 
 >> ^For your information^ <br/>
 >> ### {1} **Remote Schemas** <br/>
->>  - Pada GraphQL, "Remote Schemas" memungkinkan kita untuk menggabungkan beberapa "Beberapa GraphQL API" menjadi "Satu Unified API". <br/>
+>>  - Pada GraphQL, "Remote Schemas" memungkinkan kita untuk menggabungkan "Beberapa GraphQL API" menjadi "Satu Unified API". <br/>
 >> ini berarti bahwa meskipun Data & Service kita tersebar di berbagai Server atau Database yang berbeda, kita dapat menghubungkannya Dibawah "Satu GraphQL Endpoint", <br/>
 >> Sehingga dapat memudahkan Client untuk mengakses semua data yang dibutuhkan tanpa perlu mengelola Multiple Endpoints (tanpa perlu mengelola Lebih dari Satu Endpoint). <br/>
+>> (Dengan Remote Schemas, kita dapat menggunakan 'Satu Endpoint' untuk 'Multiple Services', sehingga Client tidak perlu tahu Data datang dari Service yang mana.)
 >>  - Remote Schema adalah 'External GraphQL API' yang berada di luar ' Server GraphQL utama' kita. <br/>
 >> (ini maksudnya "External GraphQL API" di-hosting pada Server yang berbeda dengan 'Server Utama GraphQL' kita) <br/>
 >>
