Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1709,10 +1709,21 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>
 >> [-] Client menerima 'Satu Response' seolah-olah mereka meminta dari 'Satu GraphQL API', padahal Data bersumber dari Sumber yang berbeda. <br/>  <br/>
 >>
->> ### 1.3) How Remote Schemas are used in Hasura ?  <br/>
+>> ### 1.2) How Remote Schemas are used in Hasura ?  <br/>
 >> ### (Bagaimana Remote Schemas digunakan di Hasura)  <br/>
->> - Remote Schemas memungkinkan kita untuk mengintegrasikan "External Service" dengan Hasura.  <br/>
+>> - Remote Schemas memungkinkan kita untuk mengintegrasikan "External Service" dengan Hasura.  <br/>  <br/>
 >>
+>> ### 1.3) How Remote Schemas Compare to REST API ?  <br/>
+>> ### (Bagaimana "Remote Schemas" dibandingkan dengan "REST API")   <br/>
+>> 
+>> - Dengan "REST API", kita perlu membuat 'Request Terpisah' untuk Endpoint yang berbeda untuk bisa mendapatkan Data User & Data Product,  <br/>
+>> kemudian menggabungkan Result pada Cient Side.  <br/>
+>> 
+>> - Sedangkan dengan "Remote Schema" di GraphQL, kita hanya perlu melakukan Satu Request (dalam sebuah query yang sama) untuk bisa mendapatkan Data User & Data Product.  <br/>
+>> 
+>> (yang dimaksud dengan "Data Product" & "Data User" pada contoh ini, yaitu "User Service" & "User Product" merupakan 'External Service', yang merupakan Service yang berada di luar Hasura).  <br/>
+>>
+>> 
 >> ----
 >> <br/>
 >> ### {2} **External GraphQL Services** <br/>
