Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1726,14 +1726,21 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 
 >> ----
 >> <br/>
->> ### {2} **External GraphQL Services** <br/>
 >>
->> ----
->> {3} **REST API** : <br/>
->> **(REST API in general)** <br/>
+>> ### {2} **REST API** : <br/>
+>> ### (REST API in general)** <br/>
 >>
+>>  #### 2.1) Dengan "REST API", kita perlu membuat 'Request Terpisah' untuk Endpoint yang berbeda untuk bisa mendapatkan Data. <br/> 
+>> #### ( Hal ini berbeda dengan Remote Schemas ) <br/>
+>>
+>> 
+>> -------
+>> ### {4} **REST API in GraphQL** <br/>
+>>
+>> ------
+>>### {3} **External GraphQL Services** <br/>
 >> ----
->> {4} **REST API in GraphQL** <br/>
+>> 
 
 #### [2] Actions : 
 Actions memungkinkan kita untuk memperluas Hasura Schema dengan mendefinisikan 'Custom Business Logic' dan menghubungkan ke REST API.
