Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1733,12 +1733,22 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  #### 2.1) Dengan "REST API", kita perlu membuat 'Request Terpisah' untuk Endpoint yang berbeda untuk bisa mendapatkan Data. <br/> 
 >> #### ( Hal ini berbeda dengan Remote Schemas ) <br/>
 >>
+>> - Dengan REST API, setiap jenis data biasanya memiliki 'Endpoint nya sendiri'.  <br/>
+>> misalnya, kita ingin mengambil Data mengenai "User" dan "Product"  <br/>
+>> (seperti Data User, dan Data Product yang dibeli oleh User tersebut).  <br/>
+>>  <br/>
+>> Pada kasus ini, Data mengenai User & Product, berasal "bukan dari External Service."  <br/> 
+>> <br/>
+>> Jika kita ingin meminta Data untuk User & Product, kita harus membuat Dua "Request yang terpisah" ke Dua Endpoint yang berbeda, yaitu Endpoint User & Endpoint Product. <br/>
+>> (jika kita ingin meminta Tiga jenis data berbeda, misalnya Data User, Product, dan Order, maka kita perlu membuat Tiga Request yang terpisah ke Tiga Endpoint yang berbeda). <br/>  
+>>  <br/>
+>> Berikut ini contohnya :  <br/> 
 >> 
 >> -------
->> ### {4} **REST API in GraphQL** <br/>
+>> ### {3} **REST API in GraphQL** <br/>
 >>
 >> ------
->>### {3} **External GraphQL Services** <br/>
+>>### {4} **External GraphQL Services** <br/>
 >> ----
 >> 
 
