Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1740,7 +1740,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> Pada kasus ini, Data mengenai User & Product, berasal "bukan dari External Service."  <br/> 
 >> <br/>
 >> Jika kita ingin meminta Data untuk User & Product, kita harus membuat Dua "Request yang terpisah" ke Dua Endpoint yang berbeda, yaitu Endpoint User & Endpoint Product. <br/>
->> (jika kita ingin meminta Tiga jenis data berbeda, misalnya Data User, Product, dan Order, maka kita perlu membuat Tiga Request yang terpisah ke Tiga Endpoint yang berbeda). <br/>  
+>> (jika kita ingin meminta Tiga jenis data berbeda, misalnya Data User, Product, dan Order, maka kita perlu membuat Tiga Request yang terpisah ke Tiga Endpoint yang berbeda, yaitu 'Endpoint User', 'Endpoint Product', dan 'Endpoint Order'). <br/>  
 >>  <br/>
 >> Berikut ini contohnya :  <br/> 
 >> 
