Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1744,6 +1744,21 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >> Berikut ini contohnya :  <br/> 
 >> 
+>> (1) untuk mengambil "Data User" :  <br/>
+>> 	```
+>> 	GET/users/{userId}
+>> 	```
+>> -> "/users" merupakan Endpoint untuk User <br/>
+>> -> {userId} merupakan Id yang menunjukkan User mana yang ingin kita ambil datanya  <br/>  <br/>
+>> 
+(2) untuk mengambil "Data Product" (seperti Product yang dibeli oleh User) :   <br/>
+>> 	```
+>> 	GET/users/{userId}/products
+>>  	```
+>> -> "/products" merupakan Endpoint untuk Product  <br/>
+>> -> "/user/{userId}" menunjukkan User mana yang Data Product nya ingin kita ambil  <br/>
+>>
+>>
 >> -------
 >> ### {3} **REST API in GraphQL** <br/>
 >>
