Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1752,17 +1752,20 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> -> {userId} merupakan Id yang menunjukkan User mana yang ingin kita ambil datanya  <br/>  <br/>
 >> 
 (2) untuk mengambil "Data Product" (seperti Product yang dibeli oleh User) :   <br/>
->> 	```
+>> 	
 >> 	GET/users/{userId}/products
->>  	```
->>  
+>>  	
+>>   <br/>
 >> -> "/products" merupakan Endpoint untuk Product  <br/>
->> -> "/user/{userId}" menunjukkan User mana yang Data Product nya ingin kita ambil  <br/>
+>> -> "/user/{userId}" menunjukkan User mana yang Data Product nya ingin kita ambil 
 >>
+>>  <br/>
+>>  <br/>
+>>  <br/>
 >>
 >> -------
->>  
->> ### {3} **REST API in GraphQL** <br/>
+
+>>  ### {3} **REST API in GraphQL** <br/>
 >>
 >> 
 >> ------
