Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1751,7 +1751,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> -> "/users" merupakan Endpoint untuk User <br/>
 >> -> {userId} merupakan Id yang menunjukkan User mana yang ingin kita ambil datanya  <br/>  <br/>
 >> 
-(2) untuk mengambil "Data Product" (seperti Product yang dibeli oleh User) :   <br/>
+>> (2) untuk mengambil "Data Product" (seperti Product yang dibeli oleh User) :   <br/>
 >> 	
 >> 		GET/users/{userId}/products
 >>  
