Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1757,8 +1757,12 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  
 >>   
 >> -> "/products" merupakan Endpoint untuk Product  <br/>
->> -> "/user/{userId}" menunjukkan User mana yang Data Product nya ingin kita ambil 
->>
+>> -> "/user/{userId}" menunjukkan User mana yang Data Product nya ingin kita ambil <br/>
+>> <br/>
+>> -> Cara kerja Request diatas - Step by Step :  <br/>
+>> (1) Client membuat Request ke Endpoint berbeda : <br/>
+>> [-] Pertama-tama, Client mengrimkan Request ke "User Endpoint" untuk mendapatkan "Informasi User", seperti User Name, User Email, dan User Address. <br/>
+>> [-] Kemudian, Client mengirimkan Request kedua ke "Products Endpoint" untuk mendapatkan informasi Products yang berhubungan dengan User, seperti Product apa saja yang dibeli User. <br/>
 >>  <br/>
 >>  <br/>
 >>  <br/>
