Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1763,6 +1763,10 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (1) Client membuat Request ke Endpoint berbeda : <br/>
 >> [-] Pertama-tama, Client mengrimkan Request ke "User Endpoint" untuk mendapatkan "Informasi User", seperti User Name, User Email, dan User Address. <br/>
 >> [-] Kemudian, Client mengirimkan Request kedua ke "Products Endpoint" untuk mendapatkan informasi Products yang berhubungan dengan User, seperti Product apa saja yang dibeli User. <br/>
+>> <br/>
+>> (2) Client menunggu setiap Response : <br/>
+>> [-] untuk setiap Request, Client harus menunggu Server untuk memberikan Response berupa Data. <br/>
+>> [-] Pada Slow Network (jaringan yang lambat), Pengiriman Response dari Server ini bisa memakan waktu, terutama jika melibatkan banyak Endpoint. <br/>
 >>  <br/>
 >>  <br/>
 >>  <br/>
