Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1767,8 +1767,17 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (2) Client menunggu setiap Response : <br/>
 >> [-] untuk setiap Request, Client harus menunggu Server untuk memberikan Response berupa Data. <br/>
 >> [-] Pada Slow Network (jaringan yang lambat), Pengiriman Response dari Server ini bisa memakan waktu, terutama jika melibatkan banyak Endpoint. <br/>
->>  >> ..  <br/>
->>  >> ..  <br/>
+>>  >> ^^For your information^^ <br/>
+>>  >> <1> **Bagaimana Cara Server & Endpoint bekerja sama pada REST API** <br/>
+>>  >> 	<br/>
+>>  >> -> REST API merupakan cara berbagai Software atau System yang berbeda untuk berkomunikasi melalui internet <br/>
+>>  >> dengan menggunakan Metode 'Standard HTTP Methods' (seperti GET, POST, PUT, DELETE). <br/>
+>>  >> <br/>
+>>  >> -> Server merupakan sebuah Device atau System yang menyediakan Resources, Data, atau Services ke Systema atau Computer lain (seperti Client) melalui Network (jaringan).<br/>
+>>  >> Pada konteks REST API, Server meng-hosting API dan Server memproses Request dari Clients. <br/>
+>>  >> ("Hosts" atau "meng-hosting" berarti menyediakan Resources untuk Sytem lainnya)<br/>
+>>  >> (Pada kalimat diatas "Server meng-hosting API" artinya API disimpan didalam Server (API is Stored inside the Server))<br/>
+>>  >> ^^ ^^
 >>
 >>  <br/>
 >>  <br/>
