Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1780,6 +1780,16 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> <br/>
 >>  >> -> Endpoint merupakan sebuah Spesifik URL (Uniform Resource Locator) di Server yang mewakili Spesifik Resource atau Action (yang mewakili Resource atau Action tertentu). <br/>
 >>  >> masing-masing Endpoint sesuai dengan Function atau Bagian Data tertentu pada API. <br/>
+>>  >> 
+>>  >> -> Cara kerja bagaimana "Endpoint" & "Server" berkerja sama :  <br/>
+>>  >>  <br/>
+>>  >> (1) Client membuat Request :  <br/>
+>>  >> Saat Kita menggunakan 'Web Page' atau Aplikasi, "hal tersebut membutuhkan Informasi dari Server."  <br/>
+>>  >> Misalnya jika kita ingin melihat informasi daftar User (berarti kita ingin melihat Data User), maka Client mengirim sebuah Request ke sebuat Spesifik Endpoint.  <br/>
+>>  >> (seperti  `https://api.example.com/users`  <br/>
+>>  >> , yang mana Endpoint tersebut adalah "/users")  <br/>
+>>  >> (Pada REST API, dalam sebuah Request hanya bisa berisi permintaan ke Satu Endpoint.  <br/>
+>>  >> yang mana ini berarti jika Client ingin mengirim permintaan ke Dua Endpoint, maka Client perlu membuat 'Dua Request terpisah' (two separate requests)).  <br/>
 >>  >> ^^ ^^
 >>
 >>  <br/>
