Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1779,7 +1779,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> (Pada kalimat diatas "Server meng-hosting API" artinya API disimpan didalam Server (API is Stored inside the Server))<br/>
 >>  >> <br/>
 >>  >> -> Endpoint merupakan sebuah Spesifik URL (Uniform Resource Locator) di Server yang mewakili Spesifik Resource atau Action (yang mewakili Resource atau Action tertentu). <br/>
->>  >> masing-masing Endpoint sesuai dengan Function atau Bagian Data tertentu pada API. <br/>
+>>  >> masing-masing Endpoint sesuai dengan Function atau Bagian Data tertentu pada API. <br/>  <br/>  <br/>
 >>  >> 
 >>  >> -> Cara kerja bagaimana "Endpoint" & "Server" berkerja sama :  <br/>
 >>  >>  <br/>
